# der

./: .gitignore  CMakeLists.txt  README.md  colored_print.cpp  main  main.cpp  main.der  test.c  test.cpp  test.der
examples/: struct.der.c
include/: ast.hpp  codegen.hpp  debug.hpp  der_ir.hpp  lexer.hpp  parser.hpp  source_loc.hpp  typechecker.hpp  types.hpp
